    option (Closes: #308507)
  * Change the menu section to Apps/Tools (Closes: #308683). 
  * The conflict between unison and unison-gtk as proposed in bug #308683 will
    not be used: 
    * the dependency is mainly a documentation dependency (symlink for
      unison-gtk.1.gz and /usr/share/doc/unison-gtk )
    * user can choose to install both unison and unison-gtk

 -- Sylvain Le Gall <sylvain.le-gall@polytechnique.org>  Sat, 13 Aug 2005 20:17:11 +0200

unison (2.12.0-1) unstable; urgency=low

  * New upstream release
  * Change the watch file to allow QA to use it
  * Upgrade standards version to 3.6.2.0 (no change)

 -- Sylvain Le Gall <sylvain.le-gall@polytechnique.org>  Thu, 28 Jul 2005 00:15:20 +0200

unison (2.10.2-3) unstable; urgency=low

  * Backport of sarge changes. Unison doesn't read/write on
    $HOME/.unison, it is only a hack used in Fspath.canonizeFspath
    and called from Os.unisonDir. Set the HOME variable before
    generating to be $(CURDIR) in debian/rules (Closes in sarge:#308773)

 -- Sylvain Le Gall <sylvain.le-gall@polytechnique.org>  Fri, 13 May 2005 00:11:09 +0200

unison (2.10.2-2) unstable; urgency=low

  * Using PACKAGE_VERSION to substitute variable in doc-base. (Closes: #307411)
  * unison-gtk now recommends ssh-askpass, put a note in README.Debian
    concerning the fact that ssh-askpass is required for using a password
    protected SSH connection (Closes: #238854)
  * State the changes of archive format from 2.9.1 to 2.10.2 in NEWS.Debian (Closes: #308126)

 -- Sylvain Le Gall <sylvain.le-gall@polytechnique.org>  Mon,  9 May 2005 00:47:47 +0200

unison (2.10.2-1) unstable; urgency=medium

  * Transition to ocaml 3.08.3 ( Closes: #304124 )
  * Split the package unison in unison2.9.1 and unison for being able to
    have 2 versions of the protocol.
  * Use update-alternative to be able to install both unison2.9.1 and
    unison
  * Revisit the build system : use sed and mv to create package unison2.9.1