@@ -1,3 +1,20 @@
+unison (2.13.16-1) unstable; urgency=low
+
+ As of version 2.10.2, the package use an alternative to let the user choose between unison
+ and unison2.9.1 binaries for unison and unison-gtk. The binaries used in unison and unison-gtk 
+ package were versionned binaries (ie unison2.10.2 and unison2.10.2-gtk). This was a mistake. 
+ When trying to upgrade to new upstream version, former alternatives were not removed and
+ you keep symlinks to non existent binaries (ie you stay with unison pointing to 
+ unison2.10.2). This behavior is corrected by using a stable name for unison binaries (ie 
+ unison-latest-stable).
+
+ If you have configured alternatives, you may encounter some problem, because during 
+ upgrade the symlink won't be updated, since it has been user configured. In this case, you 
+ should run "update-alternatives --auto unison && update-alternatives --auto unison-gtk" to 
+ restore the good behavior.
+
+ -- Sylvain Le Gall <sylvain.le-gall@polytechnique.org>  Sat, 13 Aug 2005 20:17:11 +0200
+
 unison (2.10.2-2) unstable; urgency=low
 
  Upgrading from version 2.9.1 to 2.10.2 involves a lot of changes. In particular, most of
