@@ -1,3 +1,3 @@
-?package(@UNISON_GTK_PACKAGE@):needs="x11" section="Apps/Net" \
+?package(@UNISON_GTK_PACKAGE@):needs="x11" section="Apps/Tools" \
  title="Unison @VERSION@ (GTK)" command="/usr/bin/@UNISON_GTK@" \
  longtitle="Unison @VERSION@ file synchronizer (GTK interface)"
