@@ -9,6 +9,13 @@ unison (2.13.16-1) unstable; urgency=low
     * the dependency is mainly a documentation dependency (symlink for
       unison-gtk.1.gz and /usr/share/doc/unison-gtk )
     * user can choose to install both unison and unison-gtk
+  * Correct a problem in the alternative system: when a package is upgraded
+    upstream, the binary provided is also changed (ie going from 
+    /usr/bin/unison-2.12.0 to /usr/bin/unison-2.13.16). So we symlinked the
+    binary to unison-latest-stable and use this binary in the alternative
+    system. 
+  * Add a unison[-gtk].preinst in order to correct the former behavior of
+    update alternatives.
 
  -- Sylvain Le Gall <sylvain.le-gall@polytechnique.org>  Sat, 13 Aug 2005 20:17:11 +0200
 
